# learning-qt

./: CMakeLists.txt  build.sh  git.sh
modules/: CMakeLists.txt
src/: CMakeLists.txt  bootstrap.cpp  run.cpp
